--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.1",
     "recharts": "^1.6.2",
+    "sprintf-js": "^1.1.2",
     "styletron-engine-atomic": "^1.4.1",
     "styletron-react": "^5.2.1",
     "typed-signals": "^1.0.5",
@@ -85,6 +86,7 @@
     "@types/react-virtualized": "^9.21.3",
     "@types/reactstrap": "^8.0.1",
     "@types/recharts": "^1.1.20",
+    "@types/sprintf-js": "^1.1.2",
     "@types/styletron-engine-atomic": "^1.1.0",
     "@types/styletron-react": "^5.0.1",
     "@types/styletron-standard": "^2.0.0",
