--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -18,7 +18,7 @@ sphinx-rtd-theme = "*"
 recommonmark = "*"
 # Packages used in unit tests:
 altair = "*"
-matplotlib = {version = "*",markers = "python_version > '3.0'"}
+matplotlib = "*"
 scipy = "<1.3.0"
 plotly = "*"
 chart-studio = "*"
