--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -26,7 +26,7 @@ bokeh = "*"
 graphviz = "*"
 parameterized = "*"
 pydot = "*"
-tensorflow = "*"
+tensorflow = ">=2.0.0"
 seaborn = "*"
 prometheus-client = "*"
 opencv-python = "*"
