Fix Mnist example running in two browsers at the same time (#216)
* update mnist demo to use TF 2.0 api
* upgrade tensorflow to 2.0.0

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -25,7 +25,7 @@ bokeh = "*"
 graphviz = "*"
 parameterized = "*"
 pydot = "*"
-tensorflow = "*"
+tensorflow = ">=2.0.0"
 seaborn = "*"
 prometheus-client = "*"
 opencv-python = "*"
