Ignoring typescript in plugin htmlParser import

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,8 +15,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es5",
-    "noImplicitAny": true
+    "target": "es5"
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
