--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,18 +70,24 @@
   },
   "devDependencies": {
     "@craco/craco": "^5.4.0",
+    "@danmarshall/deckgl-typings": "^2.2.5",
     "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.138",
+    "@types/mocha": "^5.2.7",
+    "@types/moment": "^2.13.0",
+    "@types/moment-duration-format": "^2.2.2",
     "@types/node": "^12.7.4",
+    "@types/numeral": "^0.0.26",
     "@types/plotly.js": "^1.44.8",
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.8.4",
+    "@types/react-map-gl": "^5.0.1",
     "@types/react-plotly.js": "^2.2.3",
     "@types/react-transition-group": "^4.2.2",
     "@types/react-virtualized": "^9.21.3",
