Remove all snapshots from repo, except linux/2x (used in circleci)

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,10 @@ mochawesome-report
 mochawesome
 frontend/mochawesome.json
 
+# Ignore screenshots that don't get used in CircleCI
+frontend/cypress/snapshots/darwin
+frontend/cypress/snapshots/linux/1x
+
 ########################################################################
 # VSCode
 ########################################################################
