--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "d3": "^5.12.0",
     "d3-graphviz": "^2.6.1",
     "deck.gl": "^7.2.3",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
     "lodash": "^4.17.15",
@@ -55,6 +57,7 @@
     "react-markdown": "^4.2.2",
     "react-plotly.js": "^2.3.0",
     "react-scripts": "^3.0.1",
+    "react-test-renderer": "^16.10.2",
     "react-transition-group": "^4.3.0",
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.1",
@@ -74,6 +77,7 @@
     "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
+    "@types/enzyme": "^3.10.3",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.138",
