Fixing lint and disable ban-ts-ignore rule

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -58,7 +58,8 @@
     "@typescript-eslint/explicit-function-return-type": [
       "warn",
       { "allowExpressions": true }
-    ]
+    ],
+    "@typescript-eslint/ban-ts-ignore": 0
   },
   "settings": {
     "react": {
