--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/katex": "^0.10.2",
     "aws-sdk": "^2.524.0",
     "baseui": "^8.17.1",
     "bokehjs": "^1.2.0",
@@ -32,6 +33,7 @@
     "d3-graphviz": "^2.6.1",
     "deck.gl": "^7.2.3",
     "immutable": "^4.0.0-rc.12",
+    "katex": "^0.11.1",
     "leaflet": "^1.3.4",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
@@ -50,6 +52,7 @@
     "react-google-login": "^5.0.4",
     "react-hotkeys": "^1.1.4",
     "react-json-view": "^1.19.1",
+    "react-katex": "^2.0.2",
     "react-leaflet": "^2.4.0",
     "react-map-gl": "^5.0.7",
     "react-markdown": "^4.2.2",
@@ -59,6 +62,7 @@
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.1",
     "recharts": "^1.6.2",
+    "remark-math": "^2.0.0",
     "sprintf-js": "^1.1.2",
     "styletron-engine-atomic": "^1.4.1",
     "styletron-react": "^5.2.1",
