Try circleci without venv cache
To show that
/bin/sh: 2: [[: not found
/bin/sh: 2: 3.7.4: not found
happens on the debian build on circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,6 +168,7 @@ jobs:
           name: Run make pipenv-lock and create virtualenv
           command: |
             echo 'Checking for virtualenv'
+            mv venv disable-venv-cache
             if [ ! -d venv ] ; then
               if [ "${CIRCLE_JOB}" == "python-2.7.16" ] ; then
                 pip install virtualenv
