Explicitly tell if setup worked

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,7 +183,7 @@ jobs:
                 python -m venv venv
               fi
               source venv/bin/activate
-              make setup
+              make setup && echo "Made setup"
               make pipenv-lock
               deactivate
             else
