Dockerfile: ensure we install the NODE_VERSION we reference elsewhere

--- a/e2e/Dockerfile
+++ b/e2e/Dockerfile
@@ -34,9 +34,9 @@ RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh
 ARG NVM_DIR=$HOME/.nvm
 ARG NODE_VERSION=v10.16.3
 
-# install yarn
+# install node and yarn
 RUN source $NVM_DIR/nvm.sh \
-    && nvm install --lts=dubnium \
+    && nvm install $NODE_VERSION --lts=dubnium \
     && npm install -g yarn
 
 # node path
