--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
     "node-sass": "^4.12.0",
-    "numeral": "^2.0.6",
+    "numbro": "^2.1.2",
     "plotly.js": "^1.49.4",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
